[package]
name = "moonraker_telegram_bot"
version = "0.0.1"
authors = ["Jhyrachy <jacopopieri@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.5", features = ["full"] }
tokio = { version = "1.5.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"